fix: loading steps were causing scrolling flickering (#15827)

--- a/airbyte-webapp/src/area/connection/components/AISyncFailureExplanation/AISyncFailureExplanation.module.scss
+++ b/airbyte-webapp/src/area/connection/components/AISyncFailureExplanation/AISyncFailureExplanation.module.scss
@@ -34,4 +34,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  min-height: 200px;
+  overflow: hidden;
 }
